--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "json-server": "^0.15.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-image-lightbox": "^5.1.1",
+    "react-images": "^1.1.0-beta.2",
+    "react-popupbox": "^2.0.8",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
