--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "json-server": "^0.15.1",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.10.2",
     "react-image-lightbox": "^5.1.1",
     "react-images": "^1.1.0-beta.2",
