--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-image-lightbox": "^5.1.1",
     "react-images": "^1.1.0-beta.2",
     "react-popupbox": "^2.0.8",
+    "react-rating": "^2.0.4",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
